# ghc-bench-sum

./: .dir-locals.el  .gitignore  BenchSum.corehs  BenchSum.hs  Zoutput.txt  bench-sum.cabal  diff-colored-normal.sh  gen.sh  gistfile1.txt  stack.yaml
compiler-outs/: BenchSum-lts-2.22-color.corehs  BenchSum-lts-2.22.corehs  BenchSum-lts-6.19-color.corehs  BenchSum-lts-6.19.corehs  BenchSum-lts-7.0-color.corehs  BenchSum-lts-7.0.corehs  Zoutput-lts-2.22.txt  Zoutput-lts-6.19.txt  Zoutput-lts-7.0.txt
compiler-outs-old/: BenchSum-lts-2.22-color.corehs  BenchSum-lts-6.19.corehs  BenchSum-lts-7.0.corehs  BenchSum.hs  Zoutput-lts-6.19.txt  Zoutput-lts-7.0.txt  funs-lts-7.0
