name:                bench-sum
version:             0.1.0.0
license:             BSD3
author:              Paolo G. Giarrusso
maintainer:          p.giarrusso@gmail.com
build-type:          Simple
cabal-version:       >=1.10

Library
  default-language:    Haskell2010

Benchmark BenchSum
  Type:                exitcode-stdio-1.0
  Main-Is:             BenchSum.hs
  build-depends:       base >=4.6 && <4.10
                     , criterion
                     , deepseq >= 1.4.1.1
  ghc-options:         -Wall
                       -- Recommended by criterion docs to prevent optimizations breaking results, but makes no difference.
                       -- -fno-full-laziness
  default-language:    Haskell2010
